Fix FindBugs problems